--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,9 +1,10 @@
 [package]
 name = "presiding-power"
-version = "0.0.0"
+version = "0.0.1"
 description = "A Tauri App"
-authors = ["you"]
+authors = ["supercoolspy"]
 edition = "2021"
+license = ""
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
@@ -19,4 +20,12 @@ tauri = { version = "2.0.0-beta", features = [] }
 tauri-plugin-shell = "2.0.0-beta"
 serde = { version = "1", features = ["derive"] }
 serde_json = "1"
-
+tauri-plugin-log = "2.0.0-beta"
+log = "^0.4"
+reqwest = { version = "0.12", features = ["rustls-tls", "cookies"] }
+reqwest-middleware = "0.3"
+reqwest-retry = "0.5"
+tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
+once_cell = "1.19.0"
+thiserror = "1.0.59"
+scraper = "0.19.0"
